tests/specs/InferVariable.txt
# mod.ts
export let a = (0);
export const b = a++;
export const c = <string> 1;
export const d = 1 as string;
export const e = await 1;
export const f = true ? "a" : 1;
export const g = (true ? "a" : null)!;
export const h = null!;
export const i = 1 == "bar";
export const j = 1 >> 1;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:12
  | 
1 | export let a = (0);
  |            ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:14
  | 
2 | export const b = a++;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:14
  | 
3 | export const c = <string> 1;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:4:14
  | 
4 | export const d = 1 as string;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:14
  | 
5 | export const e = await 1;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:6:14
  | 
6 | export const f = true ? "a" : 1;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:7:14
  | 
7 | export const g = (true ? "a" : null)!;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:8:14
  | 
8 | export const h = null!;
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:9:14
  | 
9 | export const i = 1 == "bar";
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:10:14
   | 
10 | export const j = 1 >> 1;
   |              ^


# output.txt
Defined in file:///mod.ts:1:12

let a: number

Defined in file:///mod.ts:2:14

const b: number

Defined in file:///mod.ts:3:14

const c: string

Defined in file:///mod.ts:4:14

const d: string

Defined in file:///mod.ts:5:14

const e: 1

Defined in file:///mod.ts:6:14

const f: "a" | 1

Defined in file:///mod.ts:7:14

const g: "a"

Defined in file:///mod.ts:8:14

const h: never

Defined in file:///mod.ts:9:14

const i: boolean

Defined in file:///mod.ts:10:14

const j: number


# output.json
[
  {
    "kind": "variable",
    "name": "a",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 11,
      "byteIndex": 11
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "number",
        "kind": "keyword",
        "keyword": "number"
      },
      "kind": "let"
    }
  },
  {
    "kind": "variable",
    "name": "b",
    "location": {
      "filename": "file:///mod.ts",
      "line": 2,
      "col": 13,
      "byteIndex": 33
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "number",
        "kind": "keyword",
        "keyword": "number"
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "c",
    "location": {
      "filename": "file:///mod.ts",
      "line": 3,
      "col": 13,
      "byteIndex": 55
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "string",
        "kind": "keyword",
        "keyword": "string"
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "d",
    "location": {
      "filename": "file:///mod.ts",
      "line": 4,
      "col": 13,
      "byteIndex": 84
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "string",
        "kind": "keyword",
        "keyword": "string"
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "e",
    "location": {
      "filename": "file:///mod.ts",
      "line": 5,
      "col": 13,
      "byteIndex": 114
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "1",
        "kind": "literal",
        "literal": {
          "kind": "number",
          "number": 1.0
        }
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "f",
    "location": {
      "filename": "file:///mod.ts",
      "line": 6,
      "col": 13,
      "byteIndex": 140
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "",
        "kind": "union",
        "union": [
          {
            "repr": "a",
            "kind": "literal",
            "literal": {
              "kind": "string",
              "string": "a"
            }
          },
          {
            "repr": "1",
            "kind": "literal",
            "literal": {
              "kind": "number",
              "number": 1.0
            }
          }
        ]
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "g",
    "location": {
      "filename": "file:///mod.ts",
      "line": 7,
      "col": 13,
      "byteIndex": 173
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "a",
        "kind": "literal",
        "literal": {
          "kind": "string",
          "string": "a"
        }
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "h",
    "location": {
      "filename": "file:///mod.ts",
      "line": 8,
      "col": 13,
      "byteIndex": 212
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "never",
        "kind": "keyword",
        "keyword": "never"
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "i",
    "location": {
      "filename": "file:///mod.ts",
      "line": 9,
      "col": 13,
      "byteIndex": 236
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "boolean",
        "kind": "keyword",
        "keyword": "boolean"
      },
      "kind": "const"
    }
  },
  {
    "kind": "variable",
    "name": "j",
    "location": {
      "filename": "file:///mod.ts",
      "line": 10,
      "col": 13,
      "byteIndex": 265
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "number",
        "kind": "keyword",
        "keyword": "number"
      },
      "kind": "const"
    }
  }
]
